--- a/src/sections/Contact/ContactStyles.module.css
+++ b/src/sections/Contact/ContactStyles.module.css
@@ -5,6 +5,8 @@
     text-align: center;
     justify-content: center;
     gap: 20px;
+    padding: 60px 20px;
+    margin: 60px 0;
 
     h2{
         text-decoration: underline;
